Sun Apr 13 11:06:49 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* INSTALL.CVS configure.in removed outdated macros, documented
	*  include/tdsiconv.h minor cleanup

Sat Apr 12 18:18:25 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* Makefile.am	distribute VMS-specific files
	* include/tdsiconv.h define ICONV_CONST even in absence of iconv.
	
Thu Apr 10 15:09:24 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsiconv.h src/tds/iconv.c src/tds/mem.c:
	- fix compile under win32

Thu Apr 10 14:08:50 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: disable debug by default

Thu Apr 10 13:54:59 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/tables.c:
	- remove some warnings

Thu Apr 10 13:43:02 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/ct_diagclient.c:
	- fixed test

Thu Apr 10 12:14:04 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/mem.c src/tds/unittests/common.c:
	- set ISO-8859-1 as default client charset, this make work many 
	  unittest

Tue Apr  8 15:42:21 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/Makefile.am added character_sets.h

Tue Apr  8 11:31:17 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/tds/login.c delete commented-out code

Tue Apr 08 17:03:29 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/mem.c:
	- small patch from Bill Thompson
	- reset tds result state freeing results

Tue Apr 08 13:08:28 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/iconv.c src/tds/login.c:
	- fix some comments

Tue Apr 08 12:24:53 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h include/tdsiconv.h src/server/login.c:
	* src/tds/iconv.c src/tds/login.c src/tds/mem.c:
	* src/tds/read.c src/tds/token.c src/tds/write.c:
	- allow tests to compile
	- remove some warnings

Tue Apr  8 03:10:02 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/dblib/bcp.c